# breast-cancer-detection-eda-ml-agentic-shap-email

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  PORTFOLIO_DELIVERABLES.md  README.md  breast_cancer_agentic_ml.py  obiedeh_breast_cancer_agentic_ML.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: email_config_example.json
configs/: default.yaml
docs/: ARCHITECTURE.md
reports/: README.md  sample_explainability_report.md  sample_model_report.md
src/medical_ai_explainability/: __init__.py  cli.py  data.py  evaluation.py  explainability.py  features.py  models.py  reporting.py  schema.py
tests/: test_cli.py  test_data.py  test_explainability.py  test_models_evaluation.py  test_reporting.py  test_schema.py
