[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-ai-explainability"
version = "0.1.0"
description = "Explainable and operational medical AI workflows with human-in-the-loop review."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Obinna Edeh" }]
dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
explainability = [
  "shap",
]
notebook = [
  "jupyter",
  "ipykernel",
  "matplotlib",
  "seaborn",
]

[project.scripts]
medical-ai-explainability = "medical_ai_explainability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
