[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-ai-explainability"
version = "0.1.0"
description = "Explainable and operational medical AI workflows with human-in-the-loop review."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Obinna Edeh" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]
explainability = [
  "shap>=0.42.0",
]
notebook = [
  "jupyter",
  "ipykernel",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
]

[project.scripts]
medical-ai-explainability = "medical_ai_explainability.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
